1:用户存储空间定义

--- a/src/main/resources/templates/common/nav.html
+++ b/src/main/resources/templates/common/nav.html
@@ -42,7 +42,7 @@
         </li>
     </ul>
 </nav>
-<div class="sidebar-bottom">
+<div class="sidebar-bottom" id="freeStorage">
     <h5 class="mb-3"><i class="las la-cloud mr-2"></i>容量</h5>
     <p>17.1 / 20 GB 已使用</p>
     <div class="iq-progress-bar mb-3">
