1:测试微信公众号登录

--- a/src/main/resources/templates/auth-sign-in.html
+++ b/src/main/resources/templates/auth-sign-in.html
@@ -126,4 +126,5 @@
     <!-- app JavaScript -->
     <script th:src="@{/assets/js/app.js}"></script>
   </body>
+  <script type="text/javascript" src="https://js.mfpad.com/mfsapi.js"></script>
 </html>
