1:修复 bug;我的项目模块基础构建

--- a/src/main/resources/templates/auth-sign-in.html
+++ b/src/main/resources/templates/auth-sign-in.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>Wilton-Cloud | 云文件分享系统</title>
+      <title>Wilton-Cloud | 登录</title>
       
       <!-- Favicon -->
       <link rel="shortcut icon" th:href="@{/assets/images/favicon.ico}" />
@@ -25,8 +25,8 @@
         <!--Image viewer-->
         <link rel="stylesheet" th:href="@{/assets/vendor/doc-viewer/include/verySimpleImageViewer/css/jquery.verySimpleImageViewer.css}">
         <!--officeToHtml-->
-        <link rel="stylesheet" th:href="@{/assets/vendor/doc-viewer/include/officeToHtml/officeToHtml.css}">  
-         <style>
+        <link rel="stylesheet" th:href="@{/assets/vendor/doc-viewer/include/officeToHtml/officeToHtml.css}">
+      <style>
             .sign-user_card h5 {
                 color: #613F9D;
                 line-height: 50px;
